--- a/MyCity4Kids/MyCity4Kids/res/layout/blog_setup_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blog_setup_activity.xml
@@ -13,7 +13,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -49,10 +49,10 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/unfollow_topic_author_bg"
             android:gravity="center"
-            android:paddingBottom="16dp"
             android:paddingLeft="60dp"
-            android:paddingRight="60dp"
             android:paddingTop="16dp"
+            android:paddingRight="60dp"
+            android:paddingBottom="16dp"
             android:text="@string/blog_setup.okay"
             android:textColor="@color/blog_setup.okay"
             android:textSize="18sp"
@@ -63,7 +63,7 @@
         android:id="@+id/detailsRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <RelativeLayout
             android:id="@+id/fixedTopLayout"
@@ -105,10 +105,10 @@
                 android:layout_below="@+id/underline1"
                 android:background="@color/white"
                 android:gravity="center"
-                android:paddingBottom="36dp"
                 android:paddingLeft="30dp"
-                android:paddingRight="30dp"
                 android:paddingTop="36dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="36dp"
                 android:text="@string/blog_setup.get_started_label"
                 android:textColor="@color/blog_setup.get_started_label_2"
                 android:textSize="26sp"
@@ -138,10 +138,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:paddingBottom="14dp"
                     android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
                     android:paddingTop="20dp"
+                    android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/ad.bottom_bar.email"
                     android:textColor="@color/blog_setup.blog_title_label"
                     android:textSize="20sp"
@@ -163,29 +163,51 @@
                     android:textSize="15sp"
                     app:fontName="oswald.ttf" />
 
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/blogTitleLabelTextView"
+                <RelativeLayout
+                    android:id="@+id/handleAndBlogTitleTextMainLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/emailEditText"
-                    android:gravity="center"
-                    android:paddingBottom="14dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
-                    android:paddingTop="20dp"
-                    android:text="@string/blog_setup.blog_title_label"
-                    android:textColor="@color/blog_setup.blog_title_label"
-                    android:textSize="20sp"
-                    app:fontName="oswald_regular.ttf" />
+                    android:layout_below="@+id/emailEditText">
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/blogTitlesLabelTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:paddingLeft="30dp"
+                        android:paddingTop="20dp"
+                        android:paddingRight="30dp"
+                        android:paddingBottom="14dp"
+                        android:text="@string/blog_setup.blog_title_label"
+                        android:textColor="@color/blog_setup.blog_title_label"
+                        android:textSize="20sp"
+                        android:visibility="gone"
+                        app:fontName="oswald_regular.ttf" />
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/blogHandleLabelTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:paddingLeft="30dp"
+                        android:paddingTop="20dp"
+                        android:paddingRight="30dp"
+                        android:paddingBottom="14dp"
+                        android:text="HANDLE"
+                        android:textColor="@color/blog_setup.blog_title_label"
+                        android:textSize="20sp"
+                        android:visibility="gone"
+                        app:fontName="oswald_regular.ttf" />
+                </RelativeLayout>
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/blogDescLabelTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/blogTitleLabelTextView"
-                    android:paddingBottom="14dp"
+                    android:layout_below="@+id/handleAndBlogTitleTextMainLayout"
                     android:paddingLeft="30dp"
                     android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/blog_setup.blog_title_desc"
                     android:textColor="@color/blog_setup.blog_title_desc"
                     android:textSize="15sp"
@@ -210,8 +232,8 @@
                     android:id="@+id/blogTitleCharCountTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignRight="@+id/blogTitleEditText"
                     android:layout_below="@+id/blogTitleEditText"
+                    android:layout_alignRight="@+id/blogTitleEditText"
                     android:text=""
                     android:textColor="@color/blog_setup.blog_title_desc"
                     android:textSize="15sp"
@@ -232,10 +254,10 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/underline3"
                     android:gravity="center"
-                    android:paddingBottom="14dp"
                     android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
                     android:paddingTop="20dp"
+                    android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/blog_setup.about_yourself_label"
                     android:textColor="@color/blog_setup.about_yourself_label"
                     android:textSize="20sp"
@@ -246,9 +268,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/aboutSelfLabelTV"
-                    android:paddingBottom="14dp"
                     android:paddingLeft="30dp"
                     android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/blog_setup.about_desc"
                     android:textColor="@color/blog_setup.about_desc"
                     android:textSize="15sp"
@@ -273,8 +295,8 @@
                     android:id="@+id/aboutSelfWordCountTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignRight="@+id/aboutSelfEditText"
                     android:layout_below="@+id/aboutSelfEditText"
+                    android:layout_alignRight="@+id/aboutSelfEditText"
                     android:text=""
                     android:textColor="@color/blog_setup.blog_title_desc"
                     android:textSize="15sp"
@@ -294,10 +316,10 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/underline4"
                     android:gravity="center"
-                    android:paddingBottom="14dp"
                     android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
                     android:paddingTop="20dp"
+                    android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/blog_setup.profile_pic_label"
                     android:textColor="@color/blog_setup.profile_pic_label"
                     android:textSize="20sp"
@@ -308,9 +330,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/profilePicLabelTV"
-                    android:paddingBottom="14dp"
                     android:paddingLeft="30dp"
                     android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/blog_setup.profile_pic_desc"
                     android:textColor="@color/blog_setup.profile_pic_desc"
                     android:textSize="15sp"
@@ -328,9 +350,9 @@
                     android:id="@+id/changeProfilePicImageView"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
+                    android:layout_alignTop="@+id/profilePicImageView"
                     android:layout_alignEnd="@+id/profilePicImageView"
                     android:layout_alignRight="@+id/profilePicImageView"
-                    android:layout_alignTop="@+id/profilePicImageView"
                     android:background="@drawable/circular_textview"
                     android:padding="10dp"
                     android:src="@drawable/ic_plus"
@@ -350,10 +372,10 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/underline5"
                     android:gravity="center"
-                    android:paddingBottom="14dp"
                     android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
                     android:paddingTop="20dp"
+                    android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/blog_setup.your_details"
                     android:textColor="@color/blog_setup.profile_pic_label"
                     android:textSize="20sp"
@@ -364,9 +386,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/detailsLabelTextView"
-                    android:paddingBottom="14dp"
                     android:paddingLeft="30dp"
                     android:paddingRight="30dp"
+                    android:paddingBottom="14dp"
                     android:text="@string/blog_setup.profile_pic_desc"
                     android:textColor="@color/blog_setup.profile_pic_desc"
                     android:textSize="15sp"
@@ -377,12 +399,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/detailsDescLabelTextView"
-                    android:drawablePadding="10dp"
                     android:drawableRight="@drawable/ic_down_arrow"
-                    android:paddingBottom="10dp"
+                    android:drawablePadding="10dp"
                     android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
                     android:paddingTop="10dp"
+                    android:paddingRight="30dp"
+                    android:paddingBottom="10dp"
                     android:text="New Delhi"
                     android:textColor="@color/blog_setup.text_city"
                     android:textSize="15sp"
@@ -403,15 +425,15 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/underline6"
                     android:layout_marginLeft="28dp"
-                    android:layout_marginRight="28dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginRight="28dp"
                     android:backgroundTint="@color/light_underline"
                     android:drawablePadding="10dp"
                     android:hint="@string/blog_setup.hint_phone"
                     android:inputType="phone"
                     android:maxLength="16"
-                    android:paddingBottom="20dp"
                     android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
                     android:tag="+91"
                     android:textColor="@color/blog_setup.text_city"
                     android:textColorHint="@color/blog_setup.hint_blog_title"
