--- a/MyCity4Kids/MyCity4Kids/res/layout/join_group_article_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/join_group_article_item.xml
@@ -405,7 +405,7 @@
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
                     android:paddingTop="12dp"
-                    android:src="@drawable/ic_facebook_svg"
+                    app:srcCompat="@drawable/ic_facebook_svg"
                     android:tint="@color/app_red" />
 
                 <android.support.v7.widget.AppCompatImageView
