--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -104,8 +104,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:paddingTop="12dp"
-                android:src="@drawable/ic_facebook_svg"
-                android:tint="@color/app_red" />
+                app:srcCompat="@drawable/ic_facebook_svg"/>
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/whatsappShareImageView"
