--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
@@ -8,10 +8,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
         android:layout_marginTop="8dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="2dp"
         card_view:cardCornerRadius="0dp"
         card_view:cardElevation="0dp">
 
@@ -67,6 +67,7 @@
                     android:src="@drawable/ic_videos"
                     android:visibility="invisible" />
 
+
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/txvAuthorName"
                     android:layout_width="wrap_content"
@@ -75,10 +76,10 @@
                     android:layout_gravity="bottom"
                     android:clickable="true"
                     android:gravity="bottom"
-                    android:paddingBottom="5dp"
                     android:paddingLeft="10dp"
-                    android:paddingRight="5dp"
                     android:paddingTop="8dp"
+                    android:paddingRight="5dp"
+                    android:paddingBottom="5dp"
                     android:singleLine="true"
                     android:text="@string/author_name"
                     android:textColor="@color/article_listing.author_name"
@@ -89,8 +90,8 @@
                     android:id="@+id/viewCountTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/txvAuthorName"
                     android:layout_below="@id/txvAuthorName"
+                    android:layout_alignLeft="@+id/txvAuthorName"
                     android:layout_marginLeft="9dp"
                     android:drawableLeft="@drawable/ic_views"
                     android:drawablePadding="4dp"
@@ -105,9 +106,9 @@
                     android:id="@+id/commentCountTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/viewCountTextView"
-                    android:layout_alignTop="@+id/viewCountTextView"
                     android:layout_below="@id/txvAuthorName"
+                    android:layout_alignTop="@+id/viewCountTextView"
+                    android:layout_alignBottom="@+id/viewCountTextView"
                     android:layout_marginLeft="11dp"
                     android:layout_toRightOf="@+id/viewCountTextView"
                     android:drawableLeft="@drawable/ic_comments"
@@ -122,9 +123,9 @@
                     android:id="@+id/recommendCountTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/viewCountTextView"
-                    android:layout_alignTop="@+id/viewCountTextView"
                     android:layout_below="@id/txvAuthorName"
+                    android:layout_alignTop="@+id/viewCountTextView"
+                    android:layout_alignBottom="@+id/viewCountTextView"
                     android:layout_marginLeft="11dp"
                     android:layout_toRightOf="@+id/commentCountTextView"
                     android:drawableLeft="@drawable/ic_likes"
@@ -140,13 +141,13 @@
                     android:id="@+id/bookmarkArticleImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/txvAuthorName"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignTop="@+id/txvAuthorName"
-                    android:paddingBottom="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
                     android:paddingTop="15dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
                     android:src="@drawable/ic_bookmark"
                     android:tint="@color/app_red"
                     android:visibility="visible" />
@@ -155,16 +156,16 @@
                     android:id="@+id/watchLaterImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/bookmarkArticleImageView"
+                    android:layout_alignStart="@+id/bookmarkArticleImageView"
                     android:layout_alignLeft="@+id/bookmarkArticleImageView"
+                    android:layout_alignTop="@+id/txvAuthorName"
+                    android:layout_alignBottom="@+id/bookmarkArticleImageView"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignStart="@+id/bookmarkArticleImageView"
-                    android:layout_alignTop="@+id/txvAuthorName"
-                    android:paddingBottom="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
                     android:paddingTop="15dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
                     android:src="@drawable/ic_watch"
                     android:visibility="invisible" />
             </RelativeLayout>
@@ -175,10 +176,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:orientation="horizontal"
-                android:paddingBottom="12dp"
                 android:paddingLeft="10dp"
+                android:paddingTop="12dp"
                 android:paddingRight="10dp"
-                android:paddingTop="12dp">
+                android:paddingBottom="12dp">
 
                 <ImageView
                     android:id="@+id/one"
