--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -509,7 +509,7 @@
                 android:orientation="vertical"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <org.apmem.tools.layouts.FlowLayout
                     android:id="@+id/floatingInterest"
