--- a/MyCity4Kids/MyCity4Kids/res/layout/picker_dialog_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/picker_dialog_fragment.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:maxHeight="100dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottombarUnderline"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:divider="@null"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        android:listSelector="@color/transparent" />
+        android:listSelector="@color/transparent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
     <View
         android:id="@+id/bottombarUnderline"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_below="@+id/list"
         android:layout_above="@+id/changeTopicsContainer"
         android:background="@color/light_underline" />
 
@@ -28,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp">
@@ -35,13 +37,13 @@
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/cancelTextView"
             android:layout_width="100dp"
-            android:gravity="center"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:layout_toLeftOf="@+id/saveTextView"
             android:background="@color/grey"
+            android:gravity="center"
             android:padding="20dp"
             android:text="@string/subscribe_topics.cancel"
             android:textColor="@color/white"
@@ -50,7 +52,6 @@
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/saveTextView"
             android:layout_width="80dp"
-            android:gravity="center"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
@@ -58,6 +59,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@color/app_red"
+            android:gravity="center"
             android:padding="20dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
@@ -65,4 +67,4 @@
             android:textColor="@color/white"
             app:fontName="oswald_regular.ttf" />
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
