--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -102,11 +102,11 @@
 
             <ImageView
                 android:id="@+id/badge"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
                 android:layout_below="@+id/article_title"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/default_article"
                 android:translationZ="5dp"
                 android:visibility="gone" />
 
@@ -125,7 +125,6 @@
                     android:paddingRight="10dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/default_article" />
-
 
                 <!--<WebView-->
                 <!--android:id="@+id/videoWebView"-->
@@ -158,17 +157,13 @@
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/ad.author_name.text"
                     android:textSize="12sp"
-                    app:fontName="open_sans.ttf"
-                   />
+                    app:fontName="open_sans.ttf" />
 
                 <ImageView
                     android:id="@+id/sponseredImage"
-                    android:layout_width="100dp"
-                    android:layout_height="90dp"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/default_article"
-
-                    />
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_alignParentRight="true" />
 
 
             </RelativeLayout>
