--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -17,6 +17,20 @@
             android:background="@color/white"
             android:orientation="vertical">
 
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
+                android:text="We need this information to determine the eligibility for a compaign"
+                android:gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/app_grey"
+                android:textSize="14sp"
+                android:layout_marginRight="20dp"
+                app:fontName="oswald.ttf" />
+
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/layoutGenderDOB"
