--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -64,6 +64,7 @@
     <color name="greytxt_color">#616161</color>
     <color name="new_blue">#4056DA</color>
 
+    <color name="cool_grey">#9fa6b0</color>
     <color name="tabsScrollColor">#ec3b55</color>
 
     <color name="login_grey">#cccccc</color>
@@ -463,4 +464,5 @@
     <color name="shadow_color">#FF000000</color>
     <color name="line_button">#565758</color>
     <color name="black_translucent">#50000000</color>
+    <color name="black_63">#a1000000</color>
 </resources>
